--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@pact-foundation/pact": "^10.4.0",
     "axios": "^1.2.1",
+    "body-parser": "^1.20.1",
     "express": "^4.18.2"
   }
 }
